--- a/.github/workflows/auto-unify.yml
+++ b/.github/workflows/auto-unify.yml
@@ -1,7 +1,6 @@
 name: auto-unify
 on:
-  issue_comment:
-    types: [created]
+  issue_comment: { types: [created] }
   workflow_dispatch:
 permissions:
   contents: write
@@ -10,18 +9,14 @@ jobs:
   run:
     if: github.event_name == 'workflow_dispatch' || contains(github.event.comment.body, '/unify')
     runs-on: ubuntu-latest
-    env:
-      PYTHONPATH: .
+    env: { PYTHONPATH: . }
     steps:
       - uses: actions/checkout@v4
         with: { fetch-depth: 0 }
       - run: python -m pip install --upgrade pip pytest
-      - name: Merge & normalize docs
-        run: |
-          tools/merge_docs.sh /mnt/data || echo "no /mnt/data, adjust in script"
-          tools/check_docs_sync.sh
-      - name: Tests
-        run: pytest -q
+      - run: tools/merge_docs.sh incoming || echo "no incoming; provide path or upload files"
+      - run: tools/check_docs_sync.sh
+      - run: pytest -q
       - name: Commit + PR
         run: |
           if [ -n "$(git status --porcelain)" ]; then
@@ -30,11 +25,9 @@ jobs:
             BR="chore/auto-unify-$(date +%s)"
             git checkout -b "$BR"
             git add -A
-            git commit -m "docs(canon): auto-unify + normalize (SLO/BG/∆DΩΛ)"
+            git commit -m "docs(canon): auto-unify + normalize"
             git push -u origin "$BR"
-            gh pr create \
-              --title "docs(canon): auto-unify + normalize" \
-              --body "Автоматическая нормализация канона; проверки и тесты прошли."
+            gh pr create --title "docs(canon): auto-unify + normalize" --body "Автонормализация канона (SLO/BG/∆DΩΛ), проверки прошли."
           else
             echo "Nothing to commit"
           fi
