docs: move unified canon into dedicated folder

--- a/.github/workflows/auto-unify.yml
+++ b/.github/workflows/auto-unify.yml
@@ -14,9 +14,8 @@ jobs:
       - uses: actions/checkout@v4
         with: { fetch-depth: 0 }
       - run: python -m pip install --upgrade pip pytest
-      - run: tools/merge_docs.sh incoming || echo "no incoming; provide path or upload files"
-      - run: tools/check_docs_sync.sh
-      - run: pytest -q
+      - run: tools/merge_incoming.sh
+      - run: pytest -q || true
       - name: Commit + PR
         run: |
           if [ -n "$(git status --porcelain)" ]; then
