ci(extended): implement anchors/matrix/decide-enforce checks (stub) for visibility

--- a/.github/workflows/canon-ops-extended.yml
+++ b/.github/workflows/canon-ops-extended.yml
@@ -15,4 +15,6 @@ jobs:
           python-version: '3.11'
       - name: Validate anchors + matrix + dry-run decide/enforce
         run: |
-          echo START
+          python - << 'PY'
+          print('stub')
+          PY
